core/target/surefire-reports/com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest.txt
-------------------------------------------------------------------------------
Test set: com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest
-------------------------------------------------------------------------------
Tests run: 5, Failures: 3, Errors: 0, Skipped: 0, Time elapsed: 1.769 sec <<< FAILURE! - in com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest
subType(com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest)  Time elapsed: 1.031 sec  <<< FAILURE!
java.lang.AssertionError: 
Compilation failed unexpectedly: : /tmp/junit5198846803671244905/junit7195037816252572590/Test.java:4: error: [SampleChecker] lib.A#f() is not available in <anonymous Test$1>
    new A() {}.f();
              ^
    (see https://errorprone.info/bugpattern/SampleChecker.md) (<false>) was expected to be true, but was false
	at com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest.subType(ApiDiffCheckerTest.java:390)

newDerivedMethod(com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest)  Time elapsed: 0.186 sec  <<< FAILURE!
java.lang.AssertionError: 
Compilation failed unexpectedly: : /tmp/junit3864838804043876337/junit4348937282223917420/Test.java:5: error: [SampleChecker] lib.Derived#g() is not available in lib.Derived
    new Derived().g();
                 ^
    (see https://errorprone.info/bugpattern/SampleChecker.md) (<false>) was expected to be true, but was false
	at com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest.newDerivedMethod(ApiDiffCheckerTest.java:135)

movedToSuperMethodFromMiddle(com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest)  Time elapsed: 0.181 sec  <<< FAILURE!
java.lang.AssertionError: 
Compilation failed unexpectedly: : /tmp/junit4864784156541346899/junit3067591526538928304/Test.java:4: error: [SampleChecker] lib.A#f() is not available in lib.C
    c.f();
     ^
    (see https://errorprone.info/bugpattern/SampleChecker.md) (<false>) was expected to be true, but was false
	at com.google.errorprone.bugpatterns.apidiff.ApiDiffCheckerTest.movedToSuperMethodFromMiddle(ApiDiffCheckerTest.java:332)

